# shogi_ai

./: .gitignore  README.md  pyproject.toml  train_policy.py
lib/: common.py  features.py  kifu_dataset.py
lib/network/: policy.py
src/: policy_player.py  policy_train.py
src/lib/: common.py  configure_logging.py  features.py  play.py  read_kifu.py
src/network/: policy.py
utils/: cleanse_and_split.py  filter_csa.py  setup_dataset.sh
z_null/: check_dataset.ipynb  check_kifu_info.ipynb  check_shogi_module.ipynb
